autotests/syntax-tests/tests/negative/negative127.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = Name $SWAP Name Name : = ; = ; } ; 